Modify Lab 2 and finish lab 4 and 5

--- a/Lab2/Lab2_Виджая.ipynb
+++ b/Lab2/Lab2_Виджая.ipynb
@@ -79,8 +79,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Нужно сделать так чтобы слова \"соус\" и \"пирог\" появилось в генерируемым тексте"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -161,12 +168,22 @@
       "салат 0.6465410590171814\n",
       "маринада 0.6429233551025391\n",
       "десерт 0.640424907207489\n",
-      "приправа 0.6382641196250916\n"
+      "приправа 0.6382641196250916\n",
+      "пюре 0.6351027488708496\n",
+      "ростбиф 0.6335530877113342\n",
+      "запеканка 0.6289421319961548\n",
+      "специя 0.6278029084205627\n",
+      "трюфель 0.6257482171058655\n",
+      "маринад 0.6223803162574768\n",
+      "пармезан 0.6201159954071045\n",
+      "осетрина 0.618714451789856\n",
+      "омлет 0.617813229560852\n",
+      "горчица 0.6162394285202026\n"
      ]
     }
    ],
    "source": [
-    "result = word2vec.similar_by_word(word1, topn=10)\n",
+    "result = word2vec.similar_by_word(word1, topn=20)\n",
     "for i in result:\n",
     "    e = pat.match(i[0])\n",
     "    if e is not None:\n",
@@ -175,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -190,12 +207,19 @@
       "блин 0.6650131940841675\n",
       "кулич 0.6555278301239014\n",
       "коржик 0.634498655796051\n",
-      "пряженец 0.6326996684074402\n"
+      "пряженец 0.6326996684074402\n",
+      "вязигой 0.6255769729614258\n",
+      "калач 0.6211866736412048\n",
+      "пышка 0.6195060610771179\n",
+      "буженина 0.6111767888069153\n",
+      "торт 0.6104004979133606\n",
+      "кутья 0.6032559275627136\n",
+      "хачапури 0.5972987413406372\n"
      ]
     }
    ],
    "source": [
-    "result = word2vec.similar_by_word(word2, topn=10)\n",
+    "result = word2vec.similar_by_word(word2, topn=20)\n",
     "for i in result:\n",
     "    e = pat.match(i[0])\n",
     "    if e is not None:\n",
@@ -204,29 +228,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "булочная\n",
-      "конфета\n",
-      "бублик\n",
-      "ребятишки\n",
-      "сестренка\n",
-      "подружка\n",
-      "гостинец\n",
-      "детдом\n",
-      "сторожиха\n"
+      "довесок\n",
+      "оформление\n",
+      "имитатор\n",
+      "наполнение\n",
+      "декомпозиция\n",
+      "интеллектуализация\n"
      ]
     }
    ],
    "source": [
-    "pos = [\"пирожок_NOUN\"]\n",
-    "neg = [word1]\n",
-    "dist = word2vec.most_similar(positive=pos, negative=neg)\n",
+    "pos = [\"гарнир_NOUN\"]\n",
+    "neg = [\"соус_NOUN\"]\n",
+    "dist = word2vec.most_similar(positive=pos, negative=neg, topn=15)\n",
     "for i in dist:\n",
     "    e = pat.match(i[0])\n",
     "    if e is not None:\n",
@@ -235,29 +256,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "подарочек\n",
-      "подарок\n",
-      "посылочка\n",
-      "похоронка\n",
-      "вещичка\n",
-      "отпускные\n",
-      "посылка\n",
-      "ханша\n",
-      "сувенирчик\n"
+      "фиксация\n",
+      "заполнение\n",
+      "актуализация\n",
+      "вживание\n",
+      "выравнивание\n",
+      "сужение\n",
+      "содержание\n",
+      "опускание\n",
+      "высвобождение\n"
      ]
     }
    ],
    "source": [
-    "pos = [\"гостинец_NOUN\"]\n",
-    "neg = [word2]\n",
-    "dist = word2vec.most_similar(positive=pos, negative=neg)\n",
+    "pos = [\"наполнение_NOUN\"]\n",
+    "neg = [\"пирог_NOUN\"]\n",
+    "dist = word2vec.most_similar(positive=pos, negative=neg, topn=10)\n",
+    "for i in dist:\n",
+    "    e = pat.match(i[0])\n",
+    "    if e is not None:\n",
+    "        print(e.group(1))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "кушанье\n",
+      "яство\n",
+      "десерт\n",
+      "котлета\n",
+      "деликатес\n",
+      "повар\n",
+      "лакомство\n",
+      "пирог\n",
+      "рагу\n",
+      "соус\n"
+     ]
+    }
+   ],
+   "source": [
+    "pos = [\"блюдо_NOUN\"]\n",
+    "neg = [\"фиксация_NOUN\"]\n",
+    "dist = word2vec.most_similar(positive=pos, negative=neg, topn=11)\n",
     "for i in dist:\n",
     "    e = pat.match(i[0])\n",
     "    if e is not None:\n",
