Remove unnecessary row on Lab 5

--- a/Lab5/lab5.ipynb
+++ b/Lab5/lab5.ipynb
@@ -72,7 +72,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x1051215b0>"
+       "<torch._C.Generator at 0x10a8c1610>"
       ]
      },
      "execution_count": 1,
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,24 +127,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca35c2b80b2c429fbd82cd27c1e15801",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading pytorch_model.bin:   0%|          | 0.00/3.14G [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tok, model = load_tokenizer_and_model(\"sberbank-ai/rugpt3large_based_on_gpt2\")\n",
     "#tok1, model1 = load_tokenizer_and_model(\"ai-forever/ruGPT-3.5-13B\")\n",
@@ -153,25 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = \"Исследования показали, что аскорбина кислота имеет уникальные ?, спопобные улучшить здоровье кожи\""
+    "t = \"Исследования показали, что аскорбина кислота имеет уникальные ? какие?\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = \"Свойство?\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -179,130 +155,14 @@
      "output_type": "stream",
      "text": [
       "/Users/steven/anaconda3/lib/python3.11/site-packages/torch/utils/_contextlib.py\n",
-      "свойство это?\n",
-      "Смотря что считать свойством.<s>\n",
-      "Что такое свойство, и как оно проявляется в жизни человека?\n",
-      "Способность организма к самовоспроизведению (саморазвитию), т. е. способность воспроизводить себе подобные организмы с заданными параметрами жизнеобеспечения при минимальных затратах энергии на единицу биомассы [1]. Сущность этого свойства заключается в том, что любое живое существо обладает способностью воспроизведения себе подобных организмов без какого-либо вмешательства со стороны других живых существ или каких-либо факторов внешней среды. При этом саморазвитие живого существа происходит независимо от того, какие условия окружающей среды воздействуют на него: солнечная радиация, повышенная влажность воздуха, пониженная температура - все эти факторы не оказывают существенного влияния на его жизнедеятельность. В то же время любые неблагоприятные внешние воздействия могут привести к тому, что живой организм прекратит свое существование из-за недостатка питательных веществ либо по каким-то другим\n"
+      "Исследования показали, что аскорбина кислота имеет уникальные свойства? какие?\n",
+      "Аскорбиновая кислота (витамин С) является одним из самых мощных антиоксидантов. Витамин С участвует в окислительно-восстановительных реакциях и необходим для нормального функционирования иммунной системы человека. Кроме того, витамин С укрепляет стенки кровеносных сосудов, повышает устойчивость организма к различным инфекционным заболеваниям: гриппу, малярии, вирусным гепатитам; снижает риск развития сердечно-сосудистых заболеваний у людей с повышенным артериальным давлением или сахарным диабетом 2 типа [1]. Аскорбиновой кислотой богаты все цитрусовые — апельсины, мандарины, грейпфруты, лимоны, яблоки, груши, абрикосы, персики, сливы, вишня, малина, клубника, земляника, смородина, крыжовник, облепиха, рябина, черемуха,\n"
      ]
     }
    ],
    "source": [
-    "t = \"свойство это?\"\n",
     "generated = generate(model, tok,text= t, num_beams=10, max_length=200, repetition_penalty=10.0)\n",
     "print(generated[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/steven/anaconda3/lib/python3.11/site-packages/torch/utils/_contextlib.py\n",
-      "как использовать слово свойство?\n",
-      "Свойство - это часть речи, обозначающая признак предмета или признака явления. Свойства могут быть выражены существительными в именительном падеже (существительные мужского и среднего рода), а также прилагательными с суффиксом -ов (-ев-).<s>\n",
-      "Какие есть однокоренные слова к слову свойства?\n",
-      "Однокоренных слов к слову СВОЙСТВА не так много как может показаться на первый взгляд. Однокоренными словами будут следующие: 1) Способность; 2) Приспособленность; 3) Сообразительность; 4) Усидчивость; 5) Настойчивость; 6) Терпение; 7) Смелость; 8) Заботливость; 9) Внимательность; 10) Общительность; 11) Порядочность; 12) Доброжелательность; 13) Дружелюбие; 14) Справедливость; 15) Вежливость; 16) Расторопность; 17\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = \"как использовать слово свойство?\"\n",
-    "generated = generate(model, tok,text= t, num_beams=10, max_length=200, repetition_penalty=10.0)\n",
-    "print(generated[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/steven/anaconda3/lib/python3.11/site-packages/torch/utils/_contextlib.py\n",
-      "как использовать слово свойство в лекарствах?\n",
-      "Свойство - это то, что отличает одно лекарство от другого.<s>\n",
-      "Что делать если я не могу зайти на сервер майнкрафт 1.5.2???\n",
-      "Попробуй переустановить игру или скачай другой репак!<s>\n",
-      "Помогите пожалуйста решить задачу по алгебре за 7 класс!!! Заранее спасибо!!!\n",
-      "1) х+3у=140 2) у-4х = 140 3) 140 : 4 = 60 (км/ч) Ответ: 60 км/ч скорость движения велосипедиста и мотоциклиста во второй половине дня; 120 км/час расстояние между ними с учетом того, что один из них ехал со скоростью 80 км/ ч а его товарищ двигался со скоростью 90 км/ час В первой половине дня оба двигались со средней скоростью 40 м/с Во второй половине они ехали со скоростями 70–80м/с Ускорение свободного падения равно 0,8*10^\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = \"как использовать слово свойство в лекарствах?\"\n",
-    "generated = generate(model, tok,text= t, num_beams=10, max_length=200, repetition_penalty=10.0)\n",
-    "print(generated[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/steven/anaconda3/lib/python3.11/site-packages/torch/utils/_contextlib.py\n",
-      "как укрепляет имунитет? можно с berocca plus?\n",
-      "Витамины группы В, С, Е, РР, аскорбиновая кислота, кальций, магний, фосфор, цинк, калий, натрий, железо, марганец, медь, селен, йод.<s>\n",
-      "Какие витамины и микроэлементы необходимы для укрепления иммунитета? Можно ли с берберека?\n",
-      "Берберек - это травянистое растение, которое произрастает в Южной Африке. В его состав входит большое количество витаминов, микроэлементов и аминокислот. Витамин В1, В2, В3, В4, В5, В6, В7, В8, В9, В10, В11, В12, В13, В14, В15, В16, В17, В18, В19, В20, В21, В22, В23\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = \"как укрепляет имунитет? можно с berocca plus?\"\n",
-    "generated = generate(model, tok,text= t, num_beams=10, max_length=200, repetition_penalty=1.0)\n",
-    "print(generated[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 137,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/steven/anaconda3/lib/python3.11/site-packages/torch/utils/_contextlib.py\n",
-      "что такое аскорбиновая кислота и его влияние?\n",
-      "Аскорбинка - это витамин С, который содержится в цитрусовых, яблоках, апельсинах, грейпфрутах, мандаринах, лимонах, персиках, абрикосах, смородине, вишне, черемухе, облепихе, рябине, крыжовнике, малины, клубнике, землянике, малине, ежевике, чернике, голубике, бруснике, клюкве, брусничном листке, малиновом листочке, малиновых ягодках, брусничных листочках, клюквенных ягодках и т. д. Витамины группы В (В1, В2, В3, В4, В5, В6, В7, В8, В9, В10, В11, В12, В13, В14, В15, В16\n"
-     ]
-    }
-   ],
-   "source": [
-    "t = \"что такое аскорбиновая кислота и его влияние?\"\n",
-    "generated = generate(model, tok,text= t, num_beams=10, max_length=200, repetition_penalty=1.0)\n",
-    "print(generated[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/steven/anaconda3/lib/python3.11/site-packages/torch/utils/_contextlib.py\n",
-      "Что такое аскорбиновая кислота? какое свойство влияет?\n",
-      "Аскорбинка - это витамин С, который содержится в цитрусовых. Витамин С помогает организму бороться с простудными заболеваниями и укрепляет иммунитет. Аскорбиновой кислотой богаты все цитрусовые: апельсины, мандарины, грейпфруты, лимоны, яблоки, груши, персики, абрикосы, сливы, вишня, смородина, малина, клубника, земляника, ежевика, черника, клюква, брусника, голубика, рябина, черемуха, калина, шиповник, облепиха, виноград, томаты, огурцы, капуста, морковь, свекла, лук, чеснок, петрушка, укроп, базилик, сельдерей, салат, шпинат, спаржа, горох, бобы, фасоль, чечевица, кукуруза, соя,\n"
-     ]
-    }
-   ],
-   "source": [
-    "generated1 = generate(model, tok,text= t, num_beams=10, max_length=200)\n",
-    "#generated1 = generate(model, tok,text= t, num_beams=20)\n",
-    "print(generated1[0])"
    ]
   }
  ],
